--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -29,15 +29,15 @@
 	</div>
 
 
-	<div class="container text-center ">
-		<div class="menu nav-bar">
-			<div class="row">
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 1</div>
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 2</div>
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 3</div>
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 4</div>
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 5</div>
-				<div class="col-md-2 col-sm-12 btn btn-primary">Item 6</div>
+	<div class="container text-center">
+		<div class="menu">
+			<div class="row menu">
+				<div class="col-md-2 btn btn-primary">Item 1</div>
+				<div class="col-md-2 btn btn-primary">Item 2</div>
+				<div class="col-md-2 btn btn-primary">Item 3</div>
+				<div class="col-md-2 btn btn-primary">Item 4</div>
+				<div class="col-md-2 btn btn-primary">Item 5</div>
+				<div class="col-md-2 btn btn-primary">Item 6</div>
 			</div>
 		</div>
 	</div>
